Change 1 by client

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         </div>
         <img
           class="showcase-girl"
-          src="./assets/showcase_girl.png"
+          src="./assets/showcase_girl.jpg"
           alt="Girl is reading book"
         />
       </section>
@@ -82,7 +82,7 @@
               <h4>Pattilayeva Regina</h4>
               <div class="role">ingiliz tili o’qituvchisi</div>
               <div class="info">
-                O’quvchilarga individual podxod, o’quvchilar bilan tez
+                O’quvchilarga individual yondashuv, o’quvchilar bilan tez
                 kirishuvchan, talabchan o’qituvchi.
               </div>
               <div class="tags">
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./assets/teachers_cards/teacher3.png" alt="" />
+            <img src="./assets/teachers_cards/teacher3.jpg" alt="" />
             <div class="context">
               <h4>Shavkartova Sevara</h4>
               <div class="role">kids teacher</div>
@@ -123,22 +123,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./assets/teachers_cards/teacher4.png" alt="" />
-            <div class="context">
-              <h4>Sultanmahmudova Zarnigora</h4>
-              <div class="role">ingiliz tili kids teacher</div>
-              <div class="info">
-                Darslarni qiziqtirib interaktiv tarzda olib o’tadi
-              </div>
-              <div class="tags">
-                <div class="tag">60+ o’quvchi</div>
-                <div class="tag">4 yildan oshiq tajriba</div>
-                <div class="tag">IELTS: 7</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <img src="./assets/teachers_cards/teacher5.png" alt="" />
+            <img src="./assets/teachers_cards/teacher5.jpg" alt="" />
             <div class="context">
               <h4>Abdullaeva Gulruh</h4>
               <div class="role">rus tili o’qituvchisi</div>
